# internal/server/handler/swagger_debug.go
@@ -8,11 +8,13 @@ import (
 	_ "stocks_calculator/docs"
 )
 
-
 // @title           Stocks Calculator API
 // @version         1.0
 // @host            localhost:3333
 // @BasePath        /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func registerSwagger(mux *http.ServeMux) {
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 }
